# miral

./: .bzrignore  CMakeLists.txt  README.md  building_and_using_miral.md  getting_and_using_miral.md  tasks_for_the_interested_reader.md
cmake/: Doxygen.cmake
debian/: changelog  control  copyright  libmiral-dev.install  libmiral1.install  libmiral1.symbols  libmiral2.symbols  miral-examples.install  miral-toolkit-dev.install  mirclientcpp-dev.install  rules
doc/: Doxyfile.in  footer.html.in  introducing_the_miral_api.md  mainpage.md
include/mir/al/: basic_window_manager.h  display_configuration_option.h  runner.h  session_info.h  surface.h  window_management_info.h
include/miral/: active_outputs.h  add_init_callback.h  append_event_filter.h  application.h  application_authorizer.h  application_info.h  canonical_window_manager.h  command_line_option.h  cursor_theme.h  debug_extension.h  debugextensions.h  display_configuration_option.h  internal_client.h  keymap.h  output.h  quit_on_ctrl_alt_bksp.h  runner.h  session.h  session_info.h  set_command_line_hander.h  set_command_line_handler.h  set_terminator.h  set_window_management_policy.h  set_window_manager.h  set_window_managment_policy.h  startup_internal_client.h  status_bar.h  stream_specification.h  surface.h  surface_info.h  window.h  window_info.h  window_management_options.h  window_management_policy.h  window_manager_tools.h  window_specification.h  workspace_policy.h
miral/: CMakeLists.txt  active_outputs.cpp  active_outputs.h  add_init_callback.cpp  append_event_filter.cpp  application.cpp  application_authorizer.cpp  application_authorizer.h  application_info.cpp  basic_window_manager.cpp  basic_window_manager.h  both_versions.h  canonical_window_manager.cpp  command_line_option.cpp  coordinate_translator.cpp  coordinate_translator.h  cursor_theme.cpp  debug_extension.cpp  debugextensions.cpp  display_configuration_option.cpp  input_event_filter.cpp  input_event_filter.h  internal_client.cpp  join_client_threads.h  keymap.cpp  mir_features.h.in  miral-toolkit.pc.in  miral.pc.in  mru_window_list.cpp  mru_window_list.h  output.cpp  output.h  persistent_surface_store.cpp  persistent_surface_store.h  quit_on_ctrl_alt_bksp.cpp  runner.cpp  session.cpp  set_command_line_hander.cpp  set_command_line_handler.cpp  set_terminator.cpp  (+22 more)
miral-client/: CMakeLists.txt  client.cpp
miral-kiosk/: CMakeLists.txt  kiosk_main.cpp  kiosk_window_manager.cpp  kiosk_window_manager.h  sw_splash.cpp  sw_splash.h
miral-qt/: CMakeLists.txt
miral-qt/debian/: control
miral-qt/demos/: paths.h.in
miral-qt/src/modules/Unity/Screens/: CMakeLists.txt  qquickscreenwindow.cpp  qquickscreenwindow.h  screens.h
miral-qt/tests/: CMakeLists.txt
miral-qt/tests/framework/: CMakeLists.txt  fake_displayconfigurationoutput.h  fake_mirsurface.cpp  fake_mirsurface.h  fake_session.h  fake_surface.h  mock_display.h  mock_main_loop.h  mock_mir_session.h  mock_surface.h  qtmir_test.cpp  qtmir_test.h  stub_windowcontroller.h  stub_windowmodelnotifier.cpp  stub_windowmodelnotifier.h
miral-qt/tests/mirserver/: CMakeLists.txt
miral-qt/tests/mirserver/ArgvHelper/: CMakeLists.txt
miral-qt/tests/mirserver/Clipboard/: CMakeLists.txt
miral-qt/tests/mirserver/EventBuilder/: CMakeLists.txt
miral-qt/tests/mirserver/QtEventFeeder/: CMakeLists.txt  qteventfeeder_test.cpp
miral-qt/tests/mirserver/Screen/: CMakeLists.txt
miral-qt/tests/mirserver/ScreensModel/: CMakeLists.txt  screensmodel_test.cpp  stub_display.h  testable_screensmodel.h
miral-qt/tests/mirserver/WindowManager/: CMakeLists.txt
miral-qt/tests/modules/Application/: CMakeLists.txt  application_test.cpp
miral-qt/tests/modules/ApplicationManager/: CMakeLists.txt  application_manager_test.cpp
miral-qt/tests/modules/General/: CMakeLists.txt
miral-qt/tests/modules/SessionManager/: CMakeLists.txt  session_manager_test.cpp  session_test.cpp
miral-qt/tests/modules/SharedWakelock/: CMakeLists.txt
miral-qt/tests/modules/SurfaceManager/: CMakeLists.txt  mirsurface_test.cpp
miral-qt/tests/modules/WindowManager/: CMakeLists.txt  mirsurface_test.cpp  windowmodel_test.cpp
miral-shell/: CMakeLists.txt  canonical_window_management_policy_data.cpp  canonical_window_management_policy_data.h  canonical_window_manager.cpp  canonical_window_manager.h  decoration_provider.cpp  decoration_provider.h  example_event_handling_policy.cpp  example_event_handling_policy.h  gnome_terminal.cpp  kiosk_main.cpp  kiosk_window_manager.cpp  kiosk_window_manager.h  main.cpp  miral-app.sh  miral-desktop.sh  miral-run.sh  miral-screencast.sh  miral-xrun.sh  shell_main.cpp  splash_screen.cpp  splash_screen.h  sw_splash.h  tiling_window_manager.cpp  tiling_window_manager.h  titlebar_config.cpp  titlebar_config.h  titlebar_provider.cpp  titlebar_provider.h  titlebar_window_manager.cpp  titlebar_window_manager.h
miral-shell/desktop/: CMakeLists.txt
miral-shell/spinner/: CMakeLists.txt  eglapp.cpp  eglapp.h  eglspinner.cpp  miregl.cpp  miregl.h  splash.h
miral-shell/titlebar/: CMakeLists.txt  canonical_window_management_policy_data.cpp  canonical_window_management_policy_data.h  titlebar_user_data.cpp  titlebar_user_data.h
scripts/: filter_symbols_diff.sh  process_doxygen_xml.py  testrun  testrun-with-xmir
smirsh/: CMakeLists.txt  canonical_window_management_policy_data.cpp  canonical_window_manager.cpp  canonical_window_manager.h  input_event_filter.cpp  input_event_filter.h  main.cpp  tiling_window_manager.cpp  tiling_window_manager.h  timeout_option.cpp  timeout_option.h  window_management.cpp  window_management.h
test/: CMakeLists.txt  active_outputs.cpp  active_window.cpp  display_reconfiguration.cpp  drag_active_window.cpp  modify_window_state.cpp  mru_window_list.cpp  persistent_surface_store.cpp  raise_tree.cpp  runner.cpp  select_active_window.cpp  stop_callbacks.cpp  test_server.cpp  test_server.h  test_window_manager_tools.h  window_id.cpp  window_placement.cpp  window_placement_anchors_to_parent.cpp  window_placement_client_api.cpp  window_properties.cpp  workspaces.cpp
(+51 files in other folders)
